--- a/src/common.blocks/page.scss
+++ b/src/common.blocks/page.scss
@@ -10,8 +10,8 @@ html, body.page {
 
 .page__wrapper {
 	width: 100%;
+}
 
-	&_locked {
-		position: fixed;
-	}
+.page:has(.modal_active) {
+	overflow: hidden;
 }
